--- a/multistreaming-server/stunnel-conf/etc-stunnel-conf.d-fb2.conf
+++ b/multistreaming-server/stunnel-conf/etc-stunnel-conf.d-fb2.conf
@@ -1,5 +1,5 @@
-[fb-live]
+[fb2-live]
 client = yes
-accept = 127.0.0.1:19350
+accept = 127.0.0.1:19352
 connect = live-api-s.facebook.com:443
 verifyChain = no
