--- a/multistreaming-server/stunnel-conf/etc-stunnel-conf.d-ig2.conf
+++ b/multistreaming-server/stunnel-conf/etc-stunnel-conf.d-ig2.conf
@@ -1,5 +1,5 @@
-[ig-live]
+[ig2-live]
 client = yes
-accept = 127.0.0.1:19351
+accept = 127.0.0.1:19362
 connect = live-upload.instagram.com:443
 verifyChain = no
